Fix menu overlap with the search input in Projects tab.

--- a/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
@@ -349,6 +349,7 @@
   &.float-left
     position: absolute
     left: -12.125em
+    z-index: 1001
 
 .panel-product-content
   img
